--- a/views/restaurantSearch.ejs
+++ b/views/restaurantSearch.ejs
@@ -4,22 +4,18 @@
   <body>
     <h1>Search Restaurant</h1>
     <a href="/restaurant/display/all"><p>Go back to restaurant list</p></a>
-    <br/>
-      Search Restaurant :
-      <table>
-        <tr>
-      <td><label></label></td>
-      <td>
-        <br/>
-      </td>
-      </tr>
+    <table>
       <tr>
-        <td><label>Keyword: </label></td>
-      <td>
-        <%= keyword %>
-      </td>
+        <td>
+          Keyword: 
+        </td>
+        <td>
+          <input value='<%= keyword %>' readonly/>
+        </td>
       </tr>
-      </table>
+    </table>
+    <br/>
+      <p>Search Results</p>
     <ol>
     <% for (var i = 0; i < restaurants.length; i++) { %>
          <li><p><a href="/restaurant/display/details?restaurantID=<%= restaurants[i].restaurantID %>"><%= restaurants[i].name %></a></p></li>
