--- a/views/userCreate.ejs
+++ b/views/userCreate.ejs
@@ -13,11 +13,11 @@
 			</tr>
 			<tr>
 				<td><label>Password :</label></td>
-				<td><input name="password" type="password"></td>
+				<td><input name="password" type="password" required></td>
 			</tr>
 			<tr>
 				<td><label>Re-type Password :</label></td>
-				<td><input name="reTypePassword" type="password"></td>
+				<td><input name="reTypePassword" type="password" required></td>
 			</tr>
 			<tr>
 				<td><input type="submit" value="Create"></td>
