--- a/views/restaurantDisplayAll.ejs
+++ b/views/restaurantDisplayAll.ejs
@@ -15,6 +15,10 @@
           <option value="name">Name</option>
           <option value="borough">Borough</option>
           <option value="cuisine">Cuisine</option>
+          <option value="address.street">Address - Street</option>
+          <option value="address.building">Address - Building</option>
+          <option value="address.zipcode">Address - Zipcode</option>
+          <option value="owner">Owner</option>
         </select>
       </td>
       </tr>
