--- a/views/restaurantDisplayDetails.ejs
+++ b/views/restaurantDisplayDetails.ejs
@@ -3,7 +3,7 @@
 <HTML>
   <body>
     <h1>Display Restaurant</h1>
-    <a href="/restaurant/display/all"><p>Go back to restaurant list</p></a>
+    <p><a href="/restaurant/display/all">Go back to restaurant list</a></p>
     <% if (restaurants[0].photo != "" && typeof restaurants[0].photo != "undefined"){ %>
     <img src="data:<%= restaurants[0].photoMimetype %>;base64,<%= restaurants[0].photo %>" height='200'/>
     <% } else { %>
