--- a/views/restaurantDisplayMap.ejs
+++ b/views/restaurantDisplayMap.ejs
@@ -21,7 +21,7 @@
   </head>
   <body>
     <h1>Display Restaurant</h1>
-       <a href="/restaurant/display/details?restaurantID=<%= restaurantID %>"><p>Go back to restaurant details</p></a>
+    <p><a href="/restaurant/display/details?restaurantID=<%= restaurantID %>">Go back to restaurant details</a></p>
     <div id="map"></div>
     <script>
       function initMap() {
