--- a/views/restaurantSearch.ejs
+++ b/views/restaurantSearch.ejs
@@ -3,7 +3,8 @@
 <HTML>
   <body>
     <h1>Search Restaurant</h1>
-    <a href="/restaurant/display/all"><p>Go back to restaurant list</p></a>
+    <p><a href="/restaurant/display/all">Go back to restaurant list</a></p>
+    <br/>
     <table>
       <tr>
         <td>
