--- a/views/userCreate.ejs
+++ b/views/userCreate.ejs
@@ -3,7 +3,7 @@
 <HTML>
   <body>
       <h1>Create User Account</h1>
-      <a href="/user/login"><p>Go back to login page</p></a>
+      <p><a href="/user/login">Go back to login page</a></p>
       <p style="color:red"><%= info %></p>
 	<form action="/user/create" method="post">
 		<table>
