--- a/views/userLogin.ejs
+++ b/views/userLogin.ejs
@@ -3,7 +3,7 @@
 <HTML>
   <body>
       <h1>Login User Account</h1>
-      <a href="/user/create"><p>Create User Account</p></a>
+      <p><a href="/user/create">Create User Account</a></p>
       <p style="color:red"><%= info %></p>
 	<form action="/user/login/submit" method="post">
 		<table>
