--- a/views/restaurantCreate.ejs
+++ b/views/restaurantCreate.ejs
@@ -3,7 +3,7 @@
 <HTML>
   <body>
     <h1>Create New Restaurant</h1>
-    <a href="/restaurant/display/all"><p>Go back to restaurant list</p></a>
+    <p><a href="/restaurant/display/all">Go back to restaurant list</a></p>
      <form action="/restaurant/create/submit" method="post" enctype="multipart/form-data">
 	  <table>
     	<tr>
