--- a/views/userCreateSuccessful.ejs
+++ b/views/userCreateSuccessful.ejs
@@ -4,6 +4,6 @@
     <body>
         <h1>Create User Account</h1>
         <p style="color:red"><%= info %></p>
-        <a href="/user/login"><p>Go back to login page</p></a>
+        <p><a href="/user/login">Go back to login page</a></p>
     </body>
 </HTML>
