--- a/views/restaurantUpdate.ejs
+++ b/views/restaurantUpdate.ejs
@@ -55,7 +55,7 @@
 <tr>
   <td></td>
 <td><label>- Coord :</label></td>
-<td>[ <input name="coord_lon" type="number" value="<%= restaurants[0].address.coord[0] %>" min="-180" max="180"> , <input name="coord_lat" type="number" value="<%= restaurants[0].address.coord[1] %>" min="-90" max="90"> ]</td>
+<td>[ <input name="coord_lon" type="number" value="<%= restaurants[0].address.coord[0] %>" min="-180" max="180" step="0.000000001"> , <input name="coord_lat" type="number" value="<%= restaurants[0].address.coord[1] %>" min="-90" max="90" step="0.000000001"> ]</td>
 </tr>
 </table>
 <br/>
