--- a/views/restaurantDelete.ejs
+++ b/views/restaurantDelete.ejs
@@ -4,7 +4,8 @@
   <body>
     <h1>Delete Restaurant</h1>
     <p><a href="/restaurant/display/details?restaurantID=<%= restaurants[0].restaurantID %>">Go back to restaurant details</a></p>
-    <% if (restaurants[0].photo != ""){ %>
+    <% if (restaurants[0].photo != "" && typeof restaurants[0].photo != "undefined" &&  restaurants[0].photoMimetype.includes("image/")) { 
+     %>
     <img src="data:<%= restaurants[0].photoMimetype %>;base64,<%= restaurants[0].photo %>" height='200'/>
     <% } else { %>
     <br/><p>No photo provided</p><br/>
