--- a/views/userLogin.ejs
+++ b/views/userLogin.ejs
@@ -13,7 +13,7 @@
 			</tr>
 			<tr>
 				<td><label>Password :</label></td>
-				<td><input name="password" type="password" required></td>
+				<td><input name="password" type="password"></td>
 			</tr>
 			<tr>
 				<td><input type="submit" value="Login"></td>
