--- a/views/restaurantCreate.ejs
+++ b/views/restaurantCreate.ejs
@@ -49,7 +49,7 @@
 <tr>
   <td></td>
 <td><label>- Coord :</label></td>
-<td>[ <input name="coord_lon" type="number" min="-180" max="180" step="0.000000001"> , <input name="coord_lat" type="number" min="-90" max="90" step="0.000000001"> ]</td>
+<td>[ <input name="coord_lon" type="number"" step="0.000000001"> , <input name="coord_lat" type="number" step="0.000000001"> ]</td>
 </tr>
 <tr>
   <td>Owner :</td>
